# banana-split

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
banana_split/: __init__.py  apply.py  cli.py  config.py  diff_parser.py  errors.py  git_adapter.py  planner.py  preflight.py
banana_split.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
banana_split/ai/: __init__.py  interface.py
banana_split/analysis/: __init__.py  heuristics.py  semantic_atomizer.py
banana_split/eval/: __init__.py  harness.py
examples/: eval_corpus.sample.json
tests/: test_apply_plan.py  test_cli_eval.py  test_cli_integration.py  test_diff_parser.py  test_eval_harness.py  test_git_adapter.py  test_heuristics_and_planner.py  test_preflight.py  test_real_repo_integration.py  test_semantic_atomizer.py
