[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "banana-split"
version = "0.1.0-dev"
description = "Split large git commits into small, atomic ones without changing code."
authors = [{ name = "banana-split contributors" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
banana-split = "banana_split.cli:main"

[dependency-groups]
dev = [
    "pytest",
]
